<resources>

    <!--Strings de la pantalla Ajustes de Transporte!-->
    <string name="title_activity_ajustes_transporte">ajustesTransporte</string>
    <string name="universidad">Selecciona la universidad a la cual conduciras</string>
    <string name="asientosDisponibles">Cantidad de asientos disponibles</string>
    <string name="Pasaje">Desea cobrar pasaje?</string>
    <string name="registrarRuta">Registrar Ruta</string>
    <string name="tarifa">Seleccione tarifa</string>
    <string name="ON">ON</string>
    <string name="OFF">OFF</string>
    <string name="Foto">Foto</string>
    <string name="title_activity_settings">Settings</string>
    <string name="AT">AT</string>
    <string name="InsertarUbicacion">  Insertar Ubicación</string>
    <string name="Buscar">Buscar</string>
    <string name="Abierto">Abierto</string>
    <string name="Cerrado">Cerrado</string>
    <string name="Modificar">Modificar</string>
    <string name="Guardar">Guardar</string>
    <string name="MiPerfil">Mi perfil</string>
    <string name="MetodoDePago">Metodo de pago</string>
    <string name="Alexis">Erick Cardiel</string>
    <string name="stars">★★★★★</string>
    <string name="Bianca">Bianca</string>
    <string name="DatosDeAuto">Datos de Automovil</string>
    <string name="Nombre2">Nombre: </string>
    <string name="Correo2">Correo: </string>
    <string name="anio2">Año: </string>
    <string name="Modelo2">Modelo: </string>
    <string name="Marca2">Marca: </string>
    <string name="Matricula2">Matricula: </string>
    <string name="asientos2">Asientos: </string>
    <string name="edad2">Edad: </string>
    <string name="cambioCuenta">Cambiar de cuenta</string>
    <string name="uniUABC">Universidad:</string>
    <string name="UABC">UABC</string>
    <string name="welcome">Bienvenido a Uber Univesidad </string>

    <!--INCICIO SESION Y REGISTRO-->
    <string name="app_name">UBER UNIVERSIDAD</string>
    <string name="btn_Continuar"><![CDATA[>]]></string>
    <string name="txt_IngresarL">Ingresa el código de 4 digitos enviado al +52–</string>
    <string name="btn_iniciarSesion">Iniciar Sesion</string>
    <string name="btn_registrar">Registro</string>
    <string name="txt_SeleccionaOpc">Seleciona una opción</string>
    <string name="btn_continuar"><![CDATA[>]]></string>
    <string name="ingrese_numero_de_tel_fono_m_vil">Ingrese numero de teléfono móvil</string>
    <string name="_52">+52</string>
    <string name="ingresa_tu_numero_de_telefono_movil">Ingresa tu numero de telefono movil</string>
    <string name="cont"><![CDATA[>]]></string>
    <string name="correo_electronico">Correo electronico:</string>
    <string name="ingresa_la_contrase_a_para_tu_cuenta">Ingresa la contraseña para tu cuenta:</string>
    <string name="ingresa_tu_nombre_completo">Ingresa tu nombre completo:</string>
    <string name="nombre_apellido">Nombre Apellido</string>
    <string name="reg"><![CDATA[<]]></string>
    <string name="nombre_apellido1">Nombre           Apellido</string>
    <string name="selecciona_una_imagen_de_perfil">Selecciona una imagen de perfil</string>
    <string name="_"><![CDATA[<]]></string>
    <string name="cargar">Cargar</string>
    <string name="agrega_un_m_todo_de_pago_a_tu_cuenta">Agrega un método de pago a tu cuenta</string>
    <string name="al_continuar_sin_agregar_un_m_todo_de_pago_deber_s_realizar_los_pagos_del_transporte_en_efectivo">Al continuar sin agregar un método de pago deberás realizar los pagos del transporte en efectivo.</string>
    <string name="tarjeta_de_cr_dito_d_bito">Tarjeta de crédito/débito</string>
    <string name="tarjeta_de_credito_debito">Tarjeta de Crédito/Débito</string>
    <string name="conductor">Conductor</string>
    <string name="selecciona_el_tipo_de_cuenta_a_crear">Selecciona el tipo de cuenta a crear</string>
    <string name="estudiante">Estudiante</string>
    <string name="ingrese_los_datos_de_su_tarjeta">Ingrese los datos de su tarjeta</string>
    <string name="numero_de_tarjeta_16_digitos">Numero de tarjeta (16 digitos)</string>
    <string name="c_digo_de_seguridad">Código de seguridad</string>
    <string name="a_o">Año</string>
    <string name="mes">Mes</string>
    <string name="caducidad">Caducidad</string>
    <string name="codigo_de_seguridad">Código de Seguridad</string>
    <string name="anio">Año</string>
    <string name="mess">Mes</string>
    <string name="datos_del_autom_vil">Datos del automóvil</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="matricula">Matricula</string>
    <string name="todo">TODO</string>
    <string name="buscar">Buscar</string>
    <string name="ingresa_la_contrase_a_de_tu_cuenta">Ingresa la contraseña de tu cuenta:</string>
    <string name="asientos">Asientos</string>
    <string name="registrar_ruta">Registrar Ruta</string>
    <string name="datos_de_ruta">Datos de Ruta</string>
    <string name="cancelar1">Cancelar</string>
    <string name="activar1">ACTIVAR</string>
    <string name="tarjeta_de_cr_dito_d_bito1">Tarjeta de crédito/débito</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main_conductor">Uber Universidad</string>
    <string name="title_activity_main_estudiante">Uber Universidad</string>
    <string name="selecciona_tarifa">Selecciona tarifa</string>
    <string name="nombre">Nombre: Erick Gerardo Cardiel</string>
    <string name="universidadL">Universidad: UABC</string>
    <string name="correo">Correo: erick@uabc.edu.mx</string>
    <string name="edad">Edad: 21</string>
    <string name="marcaAuto">Automóvil: Ford Focus 2015</string>
</resources>
