<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.erickcairdiel.koko.infoEstudiante2"
    android:id="@+id/drawerLayoutEst">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/uber">


        <include
            android:id="@+id/include"
            layout="@layout/toolbar" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="164dp"
            android:layout_height="139dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/Alexis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ICalificacion"
            app:srcCompat="@drawable/pasajero" />

        <RatingBar
            android:id="@+id/ICalificacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:numStars="5"
            android:rating="2"
            android:scrollIndicators="start"
            android:stepSize="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_nombre"
            android:layout_width="79dp"
            android:layout_height="0dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:text="@string/Nombre2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/txt_universidad"
            android:layout_width="114dp"
            android:layout_height="0dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:text="@string/uniUABC"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_nombre" />

        <TextView
            android:id="@+id/txt_correo"
            android:layout_width="286dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/Correo2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.284"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_universidad" />

        <TextView
            android:id="@+id/txt_edad"
            android:layout_width="83dp"
            android:layout_height="23dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/edad2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.102"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_correo" />

        <TextView
            android:id="@+id/cNombre"
            android:layout_width="271dp"
            android:layout_height="31dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="8dp"
            android:textAlignment="viewStart"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.657"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/cCorreo"
            android:layout_width="259dp"
            android:layout_height="27dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="16dp"
            android:textAlignment="viewStart"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.597"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_universidad" />

        <TextView
            android:id="@+id/cEdad"
            android:layout_width="145dp"
            android:layout_height="30dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="8dp"
            android:textAlignment="viewStart"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.231"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cCorreo" />

        <Button
            android:id="@+id/btn_cambio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="40dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/conductor"
            android:text="@string/cambioCuenta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/UABC"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/txt_universidad"
            app:layout_constraintTop_toBottomOf="@+id/cNombre" />


    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navMenuPerfilEst"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_perfil_estudiante">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>